Revert "feat: fix overflow"
This reverts commit f735a434e6b3cbe30cd0a571c759f4af6a16bff7.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,9 +60,7 @@ body::-webkit-scrollbar {
 body {
   -ms-overflow-style: none;
   scrollbar-width: none;
-
-  max-width: 100vw;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .hero::before, .hero::after {
